# octo-dl

./: .gitignore  Cargo.toml  README.md  bookmarklet.js  flake.nix  nixos-module.nix  result  rust-analyzer.toml  rust-toolchain.toml  shell.nix
scripts/: build-release.sh  parse_flamegraph.rs  parse_perfdata.rs  profile-latency.sh  profile.sh
src/: config.rs  dlc.rs  download.rs  error.rs  format.rs  fs.rs  lib.rs  main.rs  state.rs  stats.rs  url.rs
src/api/: mod.rs
src/cli/: mod.rs  progress.rs
src/config/: mod.rs
src/tui/: api.rs  app.rs  download.rs  draw.rs  event.rs  input.rs  mod.rs  web.rs
