[package]
name = "octo-dl"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-read-progress = { version = "0.2.0", features = ["tokio", "bytes"] }
console = "0.15.7"
env_logger = "0.11.8"
futures = "0.3.29"
indicatif = { version = "0.17.7", features = ["tokio", "improved_unicode"] }
log = "0.4.27"
mega = { path = "../mega-rs" }
reqwest = { version = "0.12.19", default-features = false, features = ["rustls-tls", "charset", "http2", "macos-system-configuration"] }
sha2 = { version = "0.10.8", features = ["asm", "asm-aarch64"] }
sluice = "0.5.5"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }

[dev-dependencies]
tempfile = "3.24.0"
