[package]
name = "octo-dl"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "octo_dl"
path = "src/lib.rs"

[[bin]]
name = "octo-dl"
path = "src/bin/octo-dl.rs"

[dependencies]
async-trait = "0.1"
thiserror = "2.0"
console = "0.15.7"
env_logger = "0.11.8"
futures = "0.3.29"
indicatif = { version = "0.17.7", features = ["tokio", "improved_unicode"] }
log = "0.4.27"
mega = { git = "https://github.com/mjc/mega-rs.git", branch = "parallel-download", default-features = false, features = ["rustls-tls"] }
reqwest = { version = "0.12.19", default-features = false, features = ["rustls-tls", "charset", "http2", "macos-system-configuration"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
base64 = "0.22"
aes = "0.8"
cbc = "0.1"
# sha2 with target-specific asm optimizations (not available on Windows)
[target.'cfg(all(any(target_arch = "x86_64", target_arch = "x86"), not(target_os = "windows")))'.dependencies]
sha2 = { version = "0.10.8", features = ["asm"] }

[target.'cfg(all(target_arch = "aarch64", not(target_os = "windows")))'.dependencies]
sha2 = { version = "0.10.8", features = ["asm-aarch64"] }

sluice = "0.5.5"

[target.'cfg(target_os = "windows")'.dependencies]
sha2 = "0.10.8"

[dev-dependencies]
tempfile = "3.24.0"
proptest = "1.5.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
overflow-checks = true
